--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -28,7 +28,7 @@
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
-    "@types/styled-components": "^5.1.8",
+    "@types/styled-components": "5.0.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
