--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,13 @@
 {
   "env": {
-      "es6": true
+      "es2021": true
   },
   "extends": [
       "plugin:react/recommended",
       "airbnb",
-      "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "plugin:prettier/recommended"
+      "plugin:@typescript-eslint/recommended"
   ],
   "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly",
       "__DEV__": "readonly"
   },
   "parser": "@typescript-eslint/parser",
@@ -19,25 +15,25 @@
       "ecmaFeatures": {
           "jsx": true
       },
-      "ecmaVersion": 2018,
+      "ecmaVersion": 12,
       "sourceType": "module"
   },
   "plugins": [
       "react",
-      "@typescript-eslint",
       "react-hooks",
-      "prettier"
+      "@typescript-eslint"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
-    "prettier/prettier": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "off",
-    "@typescript-eslint/ban-types": "off",
-    "react/jsx-props-no-spreading": "off",
-    "no-use-before-define": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
-    "import/prefer-default-export": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".tsx"
+        ]
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -45,11 +41,16 @@
         "ts": "never",
         "tsx": "never"
       }
-    ]
+    ],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": [
+      "error"
+    ],
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
-      "import/resolver": {
-        "typescript": {}
-      }
+    "import/resolver": {
+      "typescript": {}
     }
+  }
 }
